# duckdb-postgres

./: .gitignore  CMakeLists.txt  Makefile  build_logs.txt  create-postgres-tables.sh  extension_config.cmake  install_krb5.sh  latest_build_logs.txt  libpq_dynamic.c  libpq_dynamic.h  pg_gss_compat.c  vcpkg.json
.github/workflows/: Linux.yml  MainDistributionPipeline.yml
src/: CMakeLists.txt  postgres_binary_copy.cpp  postgres_binary_reader.cpp  postgres_connection.cpp  postgres_copy_from.cpp  postgres_copy_to.cpp  postgres_execute.cpp  postgres_extension.cpp  postgres_filter_pushdown.cpp  postgres_query.cpp  postgres_scanner.cpp  postgres_storage.cpp  postgres_text_reader.cpp  postgres_utils.cpp
src/include/: postgres_binary_reader.hpp  postgres_connection.hpp  postgres_filter_pushdown.hpp  postgres_result.hpp  postgres_result_reader.hpp  postgres_scanner.hpp  postgres_scanner_extension.hpp  postgres_text_reader.hpp  postgres_utils.hpp
src/include/storage/: postgres_catalog.hpp  postgres_catalog_set.hpp  postgres_delete.hpp  postgres_index.hpp  postgres_index_set.hpp  postgres_insert.hpp  postgres_schema_entry.hpp  postgres_schema_set.hpp  postgres_table_set.hpp  postgres_transaction.hpp  postgres_type_set.hpp  postgres_update.hpp
src/storage/: CMakeLists.txt  postgres_catalog.cpp  postgres_catalog_set.cpp  postgres_connection_pool.cpp  postgres_delete.cpp  postgres_index.cpp  postgres_index_set.cpp  postgres_insert.cpp  postgres_merge_into.cpp  postgres_optimizer.cpp  postgres_schema_entry.cpp  postgres_schema_set.cpp  postgres_table_entry.cpp  postgres_table_set.cpp  postgres_transaction.cpp  postgres_type_set.cpp  postgres_update.cpp
test/: create-decimal-tables.py  other.sql
test/configs/: attach_postgres.json
test/sql/misc/: autoload.test  postgres_binary.test
test/sql/scanner/: arrays.test  daterange_array.test  postgres_query_error.test
test/sql/storage/: attach_external_access.test  attach_filter_pushdown.test  attach_isolation_level.test  attach_issue_146.test  attach_json.test  attach_main_schema.test  attach_merge.test  attach_on_conflict.test  attach_postgis.test  attach_secret.test  attach_show_all_tables.test  attach_timeout_error.test  attach_top_n.test  attach_types.test  attach_types_lists.test  attach_types_macaddr.test  attach_types_struct.test  attach_upper_case.test  limit.test  postgres_execute_use_transaction.test  postgres_query_use_transaction.test
